asthetics + bug fixes

--- a/the_resistance/static/styles/lobbyStyle.css
+++ b/the_resistance/static/styles/lobbyStyle.css
@@ -41,11 +41,24 @@ body{
     opacity: .85;
 }
 
-h1{
+h1, h2{
     margin-top: 1%;
-    margin-left: 30vw;
+    margin-left: 44vw;
     color: white;
     font-size: 3vw;
+    transition-duration: 0.5s;
+}
+
+
+h1:hover{
+    color: rgb(197, 196, 196);
+}
+
+h2{
+    font-size: 2vh;
+    margin-left: 51vw;
+    margin-top: -1vh;
+    transition-duration: 0s;
 }
 
 #stgame{
