--- a/the_resistance/static/styles/getStartedStyle.css
+++ b/the_resistance/static/styles/getStartedStyle.css
@@ -1,3 +1,4 @@
+
 .box{
     font-size: 50px;
     color: rgb(0, 0, 0);
@@ -39,14 +40,13 @@
 }
 
 .overlay-desc {
-background: rgba(0,0,0,0);
-position: absolute;
-top: 0; right: 0; bottom: 0; left: 0;
-display: flex;
-align-items: center;
-justify-content: center;
-text-align: center;
-}
+    background: rgba(0,0,0,0);
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
 
 .overlay-tright{
 position: absolute;
@@ -55,6 +55,40 @@ display: flex;
 align-items: center;
 justify-content: center;
 }
+
+.gs{
+padding-top: 30px;
+padding-right: 30px;
+outline: none;
+background: none;
+border: 0px;
+transition: .25;
+}
+
+.gs:hover{
+    color: gray;
+}
+
+.overlay-tright{
+    position: absolute;
+    top: 0; right: 0; bottom: auto; left: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
+    
+    .gs{
+    padding-top: 30px;
+    padding-right: 30px;
+    outline: none;
+    background: none;
+    border: 0px;
+    transition: .25;
+    }
+    
+    .gs:hover{
+        color: gray;
+    }
 
 .overlay-tright{
     position: absolute;
@@ -77,17 +111,3 @@ justify-content: center;
     /*border-color: #ffffff;*/
     display: none;
 }
-
-.gs{
-padding-top: 30px;
-padding-right: 30px;
-outline: none;
-background: none;
-border: 0px;
-transition: .25;
-}
-
-.gs:hover{
-    color: gray;
-}
-
