--- a/the_resistance/templates/play.html
+++ b/the_resistance/templates/play.html
@@ -100,15 +100,15 @@
 
         <div class="overlay-desc" style="background-color: gray; opacity: .8;" id="teamvotes">
 
-                <button style="margin: 20px;" id="yay-vote" class = 'votebutton' onclick="yayvote()"><img src="{{ url_for('static', filename='assets/check.png') }}"></button>
-                <button style="margin: 20px;" id="nay-vote" class = 'votebutton' onclick="nayvote()"><img src="{{ url_for('static', filename='assets/x_mark.png') }}"></button>
+                <button style="margin: 20px;" id="yay-vote" class = 'votebutton' onclick="yayvote()"><img  alt='agree!' src="{{ url_for('static', filename='assets/check.png') }}"></button>
+                <button style="margin: 20px;" id="nay-vote" class = 'votebutton' onclick="nayvote()"><img alt='disagree!' src="{{ url_for('static', filename='assets/x_mark.png') }}"></button>
          </div>
 
 
          <div class="overlay-desc" style="background-color: gray; opacity: .8;" id="missionvotes">
             
-                <img src="{{ url_for('static', filename='assets/fail.png') }}" class="mission-card" id="fail">
-                <img src="{{ url_for('static', filename='assets/pass.png') }}" class="mission-card" id="pass">
+                <img src="{{ url_for('static', filename='assets/fail.png') }}" class="mission-card" id="fail" alt="FAIL!">
+                <img src="{{ url_for('static', filename='assets/pass.png') }}" class="mission-card" id="pass" alt="PASS!">
         </div>
 
         <div class="overlay-desc" style="background-color: gray; opacity: .8;" id="revealmvotes">
