--- a/the_resistance/templates/lobby.html
+++ b/the_resistance/templates/lobby.html
@@ -27,8 +27,11 @@
       
   <body style="font-family: zeroHour">
 
-    <h1 onclick="copyCode()"></h1>
-    <h2>copied!</h2>
+    <div class="container-fluid" style="text-align: center;">
+      <h1 onclick="copyCode()"></h1>
+      <h2>copied!</h2>
+    </div>
+
     
     <!-- 
     <ul id="users"></ul> -->
