--- a/the_resistance/static/styles/playStyle.css
+++ b/the_resistance/static/styles/playStyle.css
@@ -151,6 +151,10 @@
         border-radius: 50%;
     }
 
+    .votebutton:hover{
+        background-color: rgba(128, 128, 128, 0.37);
+    }
+
     /*
     #yay-vote{
         background-color: rgb(65, 209, 65);
