--- a/the_resistance/templates/play.html
+++ b/the_resistance/templates/play.html
@@ -31,9 +31,12 @@
 
         <div class="container-fluid text-center">  
 
-            <div class="container-fluid">
-                <div class="text-center alert-box success" >You are the team Leader!</div>
 
+
+            <div class="overlay-tright" style="">
+                <div class="container-fluid">
+                    <div class="text-center alert-box success" >You are the team Leader!</div>
+                </div>
             </div>
 
 
