--- a/the_resistance/templates/lobby.html
+++ b/the_resistance/templates/lobby.html
@@ -40,8 +40,12 @@
     <!--<button id="add-item">Add item</button>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
-    <div class="row" style="float: right; margin-right: 5%; margin-top: 10%; font-family: zeroHour;">
-      <button id="stgame" style="font-family: zeroHour;" onclick="clicked()">Start Game</button>
+    <div class="row" style="float: right; margin-right: 5%; margin-top: 30vh; font-family: zeroHour; text-align: center;">
+
+      <div>
+        <p style="color: white; margin-bottom: -15vh;" id='player_cap'>Lobby is Full</p>
+        <button id="stgame" style="font-family: zeroHour;" onclick="clicked()">Start Game</button>
+      </div>
     </div>
 
 
