--- a/the_resistance/templates/play.html
+++ b/the_resistance/templates/play.html
@@ -39,6 +39,13 @@
                 </div>
             </div>
 
+            <!--
+            <div class="overlay-center" >
+                <div class="container-fluid" style="margin-top: 60vh;">
+                    <p style="color: white;">2 Spies...</p>
+                </div>
+            </div>-->
+
 
         <div class="row content">
 
